@@ -8,18 +8,17 @@ pkgver=6.2.0
 pkgrel=1
 pkgdesc='A powerful IMAP/Maildir synchronization tool'
 arch=('i686' 'x86_64')
-url='http://software.complete.org/offlineimap/'
+url='http://wiki.github.com/jgoerzen/offlineimap/'
 license=('GPL')
 depends=('python')
 noextract=($pkgname.1.gz)
-source=(http://software.complete.org/software/attachments/download/413/${pkgname}_${pkgver}.orig.tar.gz \
+source=($pkgname-$pkgver.tar.gz::http://github.com/jgoerzen/$pkgname/tarball/debian/$pkgver \
         $pkgname.1.gz)
-
-md5sums=('a23dab23ac08de063e330fe26d08e9b9'
+md5sums=('6a986c25452d0840346de70e9386f1ac'
          '0213e6f5d032be2ec8eedfbb52134ef3')
 
 build() {
-  cd ${srcdir}/$pkgname
+  cd ${srcdir}/jgoerzen-${pkgname}-1a9381a
 
   python setup.py build install --root=${pkgdir} || return 1
 
